<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.main.measurement.MeasureFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@mipmap/measure_back"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/measure_title"
                android:textColor="@color/md_black_1000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/measure_table" />

            <TextView
                android:id="@+id/measure_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#F4F2F3"
                android:gravity="center"
                android:text="21个问题    |    3分钟    |    285749人测过" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/measure_what"
                android:textColor="@color/md_black_1000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/measure_attr"
                android:textColor="@color/md_black_1000" />
        </LinearLayout>

        <Button
            android:id="@+id/measure_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/bt_measure"
            android:text="开始测评"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>